commit translated contents

--- a/articles/dms/toc.yml
+++ b/articles/dms/toc.yml
@@ -54,6 +54,8 @@
       href: resource-network-topologies.md
     - name: Bekende problemen
       items:
+        - name: Algemene problemen en fouten oplossen
+          href: known-issues-troubleshooting-dms.md
         - name: Bekende problemen - Online migratie naar Azure SQL DB
           href: known-issues-azure-sql-online.md
         - name: Bekende problemen - Online migratie naar Azure Database for MySQL
