--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -139,8 +139,8 @@
       displayName: 'recognize speech, speech recognition, speech-to-text, stt'
     - name: Geluidsinvoerstromen gebruiken (SDK)
       href: how-to-use-audio-input-streams.md
-    - name: Gecomprimeerde geluidsinvoerstromen gebruiken (SDK)
-      href: how-to-use-compressed-audio-input-streams.md
+    - name: Met codec gecomprimeerde geluidsinvoerstromen gebruiken (SDK)
+      href: how-to-use-codec-compressed-audio-input-streams.md
       displayName: 'mp3, opus, ogg, flac'
     - name: Een geluidsinvoerapparaat selecteren (SDK)
       href: how-to-select-audio-input-devices.md
@@ -184,7 +184,7 @@
               href: record-custom-voice-samples.md
             - name: Uitvoer tekst-naar-spraak afstellen
               href: how-to-voice-tuning.md
-        - name: Een aangepast activeringswoord maken (Devices-SDK)
+        - name: Een aangepast activeringswoord maken (woorden herkennen)
           href: speech-devices-sdk-create-kws.md
           displayName: 'roobo, speech devices sdk, wake word, keyword spotting, kws'
     - name: Migratie
@@ -195,9 +195,9 @@
           href: how-to-migrate-from-custom-speech-service.md
         - name: Vanuit de Translator Speech-API
           href: how-to-migrate-from-translator-speech-api.md
-    - name: Containers gebruiken
+    - name: On-premises containers gebruiken
       items:
-        - name: Containers installeren en uitvoeren
+        - name: On-premises containers installeren en uitvoeren
           displayName: 'docker, container, package, packaged app, swagger, open api, openapi, train, publish, az, acr, cli, tps, core, curl, try it now, import, pull'
           href: speech-container-howto.md
         - name: Containers configureren
@@ -220,6 +220,8 @@
         - name: Overzicht
           href: speech-sdk.md
           displayName: 'C#, C++, Java, .NET, .NET Core, UWP, Android, Linux, Windows'
+        - name: Beschikbaarheid van scenario's
+          href: scenario-availability.md
         - name: Releaseopmerkingen
           href: releasenotes.md
         - name: C++
@@ -255,6 +257,9 @@
         - name: Batchtranscriptie en -aanpassing
           href: 'https://westus.cris.ai/swagger/ui/index'
           displayName: 'Batch transcription, transcription, custom models, customization, model management'
+        - name: Gesprektranscriptie
+          href: 'https://signature.centralus.cts.speech.microsoft.com/UI/index.html'
+          displayName: 'Conversation transcription, signature generation'
         - name: Webhooks
           href: webhooks.md
           displayName: Webhooks
