--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -7,7 +7,7 @@
     - name: Meer informatie over App Service op Linux
       href: app-service-linux-intro.md
     - name: Hostingopties vergelijken
-      href: ../overview-compare.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+      href: /azure/architecture/guide/technology-choices/compute-decision-tree
 - name: Snelstartgidsen
   expanded: true
   items:
