--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -168,7 +168,7 @@
         - name: 'Blobs, wachtrijen, tabellen en bestanden'
           href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/client'
         - name: Gegevensverplaatsing
-          href: 'https://docs.microsoft.com/dotnet/api/microsoft.windowsazure.storage.datamovement'
+          href: 'https://docs.microsoft.com/dotnet/api/microsoft.azure.storage.datamovement'
         - name: Resource Manager
           href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/management'
     - name: Java
