--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -280,6 +280,9 @@
     - name: Niet-compatibele resources herstellen
       displayName: 'managed identity, task, definition, roleDefinitionIds'
       href: ./how-to/remediate-resources.md
+    - name: Azure Monitor voor VM's inschakelen (preview)
+      displayName: 'insights, log analytics, builtin'
+      href: ../../azure-monitor/insights/vminsights-enable-at-scale-policy.md?toc=/azure/governance/policy/toc.json
 - name: Naslaginformatie
   items:
     - name: Azure-CLI
